# rinha-compiler

./: .dockerignore  Cargo-docker.toml  Cargo.toml  Dockerfile  README.md  build.rs  closure_load.txt  test.rinha.json
benches/: rinha_bench.rs
files/: big_file.rinha.json  big_loop.rinha  cabuloso.rinha  closure_bug.rinha  closure_bug_2.rinha  closure_var.rinha  concat_str.rinha  countdown.rinha  fib-tailrec.rinha  fib.py  fib.rinha  fib_tco.rinha  flood_fill.rinha  functional.rinha  generate_odd_input.py  italo.rinha  iter.rinha  iter_simple.rinha  list.rinha  map_test.rinha  meta.rinha  odd_input.rinha  order_of_execution_test.rinha  perf.py  perf.rinha  perf_debug.rinha  scratchpad.rinha  simple_closure.rinha  spec_compliance.rinha  strict_equality.rinha  test.rinha  test2.rinha  tests.rinha  typing-example.txt
src/: Optimizations.md  ast.rs  declosure.rs  hir.rs  lambda_compiler.rs  lib.rs  main.rs  monomorph.rs  parser.rs  typing.rs  typing_hm.rs1  typing_imply.rs1
