[package]
name = "lambda_rinha"
version = "0.0.1"
edition = "2021"
description = "Competição saudável de compiladores"
authors = ["Community"]
documentation = "https://github.com/aripiprazole/rinha-de-compiler"
license = "MIT"
keywords = ["parsing", "programming-language"]
categories = ["parsing", "compilers", "text-editors"]

[dependencies]
# Parser
lalrpop-util = { version = "0.20.0", default-features = false, features = [
  "lexer",
  "unicode",
] }
smallvec = "1.11.1"

# Cli library dependencies
clap = { version = "4.2.4", features = ["derive"] }

# Error reporting
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.46"
bupropion = { version = "0.0.14" }

# Logging dependencies
log = "0.4.20"
fern = "0.6.2"
humantime = "2.1.0"
logos = "0.13.0"
owo-colors = "3.5.0"

# JSON
serde = { version = "1.0.188", features = ["derive"] }
serde_stacker = "0.1.10"
serde_json = { version = "1.0.105", features = ["unbounded_depth"] }

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.20.0"

[dev-dependencies]
criterion = "0.5.1"
pretty_assertions="1.4.0"

[[bench]]
name = "rinha_bench"
harness = false

[profile.release]
debug = true
opt-level = 3
codegen-units = 1

[profile.bench]
debug = true
opt-level = 3
codegen-units = 1
